spacing/layout fixes

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -65,29 +65,31 @@ h1 {
   font-style: normal;
   color: $textcolor;
   display: inline-block;
-  margin-top: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 h2 {
   color: $textcolor;
   font-weight: 700;
   font-size: $fontsize * 1.2;
-  margin-bottom: 0px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 h3 {
   color: $textcolor;
-  padding-top: 5px;
   font-size: $fontsize;
-  font-style: italic;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 p {
   font-family: $fontstack;
   color: $textcolor;
   font-size: $fontsize;
-  margin-bottom: 10px
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 a {
@@ -340,6 +342,10 @@ ul {
 
 .accordionButton[aria-expanded="true"]::before {
   content: "\f106";
+}
+
+.collapse .card-body {
+  padding-bottom: 10px;
 }
 
 // calendar fix
